--- a/sections/risultati.tex
+++ b/sections/risultati.tex
@@ -2,10 +2,8 @@
 \chapter{Risultati}
 \label{risultati}
 
-\section{Random Forest}
-
-\subsection{Metriche di valutazione}
-Le metriche di valutazione utilizzate per testare la qualità del classificatore sono:
+\section{Metriche di valutazione}
+Le metriche di valutazione utilizzate per testare la qualità dei modelli sono state:
 \begin{itemize}
 \item \textbf{Precision}: il rapporto $\frac{t_p}{t_p+f_p}$ dove $t_p$ è il numero di veri positivi e $f_p$ il numero di falsi positivi. Intuitivamente è l'abilità del classificatore di non marcare come positivo un campione negativo.
 \item \textbf{Recall}: il rapporto $\frac{t_p}{t_p+f_n}$  dove $f_n$ sono i falsi negativi. Intuitivamente è l'abilità del classificatore di trovare tutti i campioni positivi.
@@ -16,3 +14,9 @@ Le metriche di valutazione utilizzate per testare la qualità del classificatore
 dove 
 $X_{1}$ è il punteggio per un'istanza positiva e $X_{0}$ è il punteggio per un'istanza negativa, mentre $f_{0}$ e $f_{1}$ sono densità di probabilità che un campione sia negativo ($1$) o positivo ($0$)
 \end{itemize}
+
+\section{Confronto fra Classificatori}
+
+\section{Autoencoder}
+
+\section{Generative Adversarial Network}
