--- a/sections/references.bib
+++ b/sections/references.bib
@@ -344,3 +344,22 @@ year = 2017 }
   biburl    = {http://dblp.org/rec/bib/journals/corr/KingmaB14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@misc{rmsprop,
+author = { Geoffrey Hinton},
+howpublished = {\url{https://www.coursera.org/learn/neural-networks}},
+year = {2013}
+}
+
+@ARTICLE{numpy, 
+author={S. van der Walt and S. C. Colbert and G. Varoquaux}, 
+journal={Computing in Science Engineering}, 
+title={The NumPy Array: A Structure for Efficient Numerical Computation}, 
+year={2011}, 
+volume={13}, 
+number={2}, 
+pages={22-30}, 
+keywords={data structures;high level languages;mathematics computing;numerical analysis;Python programming language;high level language;numerical computation;numerical data;numpy array;Arrays;Computational efficiency;Finite element methods;Numerical analysis;Performance evaluation;Resource management;Vector quantization;NumPy;Python;numerical computations;programming libraries;scientific programming}, 
+doi={10.1109/MCSE.2011.37}, 
+ISSN={1521-9615}, 
+month={March},}
